Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
    <title>Web development course</title>
  </head>
  <body>
-   <a href="/web">Introduction to the web</a>
+   <a href="https://flatironschool.com">Flatiron School</a>
   </body>
 </html>
